--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.16",
     "@types/node": "^18.11.18",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
@@ -32,6 +33,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "rimraf": "^4.1.2",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   }
 }
