--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.16",
+    "@types/joi": "^17.2.3",
     "@types/node": "^18.11.18",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
@@ -29,6 +30,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
