--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.16",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.0",
@@ -38,6 +39,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.1.2",
     "sqlite3": "^5.1.4",
