--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
       "@config/*": ["src/config/*"],
       "@roles/*": ["src/roles/*"],
       "@users/*": ["src/users/*"],
-      "@businessPartner/*": ["src/businessPartner/*"],
+      "@vendor/*": ["src/vendor/*"],
       "@shared/*": ["src/shared/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
